--- a/EmployeePayrollBlazor/EmployeePayrollBlazor.csproj
+++ b/EmployeePayrollBlazor/EmployeePayrollBlazor.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MatBlazor" Version="2.8.0" />
     <PackageReference Include="MongoDB.Bson" Version="2.16.1" />
   </ItemGroup>
 
